unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/project_cloud__Project_Stage_Gate__c.object-meta.xml
<CustomObject>
    <label>Project Stage Gate</label>
    <nameField>
        <label>Project Stage Gate Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Stage Gates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>