unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Checklist_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Checklist_Completed_Date__c</fullName>
    <description>The date the Stage Gate was completed</description>
    <label>Checklist Completed Date</label>
    <type>Date</type>
</CustomField>