unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Completed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>