unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Description__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Description__c</fullName>
    <description>A more in detail description of the Stage Gate and what impacts it has</description>
    <label>Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>