unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Gate_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Gate_Approval_Date__c</fullName>
    <description>The date the Stage Gate was approved</description>
    <label>Gate Approval Date</label>
    <type>Date</type>
</CustomField>