unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Gate_Performance__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Gate_Performance__c</fullName>
    <description>How many days early or late the Stage Gate was completed (minus numbers indicate early completion)</description>
    <formula>project_cloud__Checklist_Completed_Date__c - project_cloud__Due_Date__c</formula>
    <label>Gate Performance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>