unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Percent_Complete__c</fullName>
    <description>The completion percent of the Stage Gate, calculated automatically by the Stage Gate Checklist Items status</description>
    <formula>IF(
	((project_cloud__Total_Completed_Items__c &gt; 0) &amp;&amp; ((project_cloud__Total_Checklist_Items__c + project_cloud__Stage_Gate_Process_Step__r.project_cloud__Total_Checklist_Items__c) &gt; 0)),
	IF(
		NOT(ISBLANK(project_cloud__Stage_Gate_Process_Step__c)),
			project_cloud__Total_Completed_Items__c / (project_cloud__Total_Checklist_Items__c + project_cloud__Stage_Gate_Process_Step__r.project_cloud__Total_Checklist_Items__c),
			project_cloud__Total_Completed_Items__c / project_cloud__Total_Checklist_Items__c
	),
	0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percent Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>