unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Stage_Gate_Process_Step__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Stage_Gate_Process_Step__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Stage Gate Process Step</label>
    <referenceTo>project_cloud__Stage_Gate_Process_Step__c</referenceTo>
    <relationshipLabel>Project Stage Gates</relationshipLabel>
    <relationshipName>Project_Stage_Gates</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>