unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Status__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Go</fullName>
            </value>
            <value>
                <fullName>Kill</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Recycle</fullName>
            </value>
            <value>
                <fullName>Skip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>