unpackaged/main/default/objects/project_cloud__Project_Stage_Gate__c/fields/project_cloud__Total_Completed_Items__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Total_Completed_Items__c</fullName>
    <description>Rollup summary for the number of completed checklist items.</description>
    <label>Total Completed Items</label>
    <summaryForeignKey>project_cloud__Stage_Gate_Checklist_Item_Status__c.project_cloud__Project_Stage_Gate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>